force-app/main/default/objects/Inventory_Transaction__c/fields/Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Item</label>
    <referenceTo>Order_Item__c</referenceTo>
    <relationshipLabel>Inventory Transactions</relationshipLabel>
    <relationshipName>Inventory_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>