force-app/main/default/objects/Inventory_Transaction__c/fields/Product_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Product_Inventory__c</fullName>
    <label>Product Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Inventory Transactions</relationshipLabel>
    <relationshipName>InventoryTransactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>