force-app/main/default/objects/Inventory_Transaction__c/validationRules/RestrictAddingNewInventoryWithoutPrice.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictAddingNewInventoryWithoutPrice</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Type__c, &apos;Add&apos;) ,   ISBLANK(Price__c) 
)</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>For New Inventory Addition Price is Required</errorMessage>
</ValidationRule>